# python-simple-tracer

./: .gitignore  .gitlint  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: numpy_matmul.py  python_class.py
simple_tracer/: __init__.py  __main__.py  tracer.py
