[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm", "wheel"]

[project]
authors = [{ name = "Your Name", email = "aaron.keesing@zozo.com" }]
name = "simple-tracer"
description = "A simple tracer for Python 3.12+"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
license = { text = "MIT License" }
requires-python = ">=3.12"
readme = "README.md"
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "simple_tracer/_version.py"

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "flake8==7.1.1",
    "flake8-pyproject==1.2.3",
    "isort==5.13.2",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

[project.scripts]
simple-tracer = "simple_tracer.__main__:main"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '(\.pyi?)$'

[tool.flake8]
max-line-length = 120

[tool.isort]
line_length = 120
profile = "black"
